@@ -10,15 +10,12 @@ import org.slf4j.LoggerFactory;
 import vht.testing.SingleTestCase;
 import vht.testing.example1.testcase.HttpUtil;
 
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class Update extends SingleTestCase {
     private static final Logger LOGGER_UPDATE = LoggerFactory.getLogger(Update.class);
     private final JSONObject request = new JSONObject();
-
+    private String token;
     private final List<Map<String, ?>> awardLevels;
 
     public Update(List<Map<String, ?>> awardLevels) {
@@ -43,32 +40,36 @@ public class Update extends SingleTestCase {
 
     @Override
     public void prepare() throws Exception {
+        // prepare request
         var awardLevels = new JSONArray(this.awardLevels);
+        request.put("rewardTypes", awardLevels);
 
-        request
-                .put("rewardTypes", awardLevels);
+        // prepare token
+        var login = new Login((Signup) null, "admin", "admin2"); // must be this role to update
+        login.test();
+        try {
+            this.token = login.responseObject.get("authorization").toString();
+
+        } catch (JSONException e) {
+            LOGGER_UPDATE.info("{}: Can't find symbol in this {}", e, login.responseObject);
+            throw e;
+        }
     }
 
     @Override
     public JSONObject doWork() throws Exception {
-        var login = new Login((Signup) null, "admin", "admin2"); // must be this role to update
-        login.test();
-        try {
-            var token = login.responseObject.get("authorization");
-            var response = HttpUtil.put2("http://127.0.0.1:8080/api/prize-period/update", request.toString(), Map.of("Authorization", token.toString()));
-            return new JSONObject(response);
-        } catch (JSONException e) {
-            LOGGER_UPDATE.info("{}: Can't find symbol in this {}", e, login.responseObject);
-            Thread.sleep(1000);
-            throw e;
-        }
-
-
+        var response = HttpUtil.put2(
+                "http://127.0.0.1:8080/api/prize-period/update",
+                request.toString(),
+                Map.of("Authorization", token),
+                Collections.emptyMap()
+        );
+        return new JSONObject(response);
     }
 
     @Override
     public void valid() throws Exception {
-        if (responseObject.get("isUpdated").equals(Boolean.TRUE) ) return;
+        if (responseObject.get("isUpdated").equals(Boolean.TRUE)) return;
         throw new Exception("Not updated");
     }
 }
